--- a/App/src/app/modules/layout/layout.component.html
+++ b/App/src/app/modules/layout/layout.component.html
@@ -1,2 +1,4 @@
-<p>layout works!</p>
-<router-outlet></router-outlet>
+<mat-toolbar class="headerM"> ok <button>mleko</button></mat-toolbar>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
