--- a/App/src/app/modules/layout/layout.component.html
+++ b/App/src/app/modules/layout/layout.component.html
@@ -1,4 +1,6 @@
-<mat-toolbar class="headerM"> ok <button>mleko</button></mat-toolbar>
+<mat-toolbar class="headerM" color="primary">
+  ok <button>mleko</button></mat-toolbar
+>
 <div class="container">
   <router-outlet></router-outlet>
 </div>
