--- a/App/src/app/modules/layout/layout.component.html
+++ b/App/src/app/modules/layout/layout.component.html
@@ -1,6 +1,15 @@
 <mat-toolbar class="headerM" color="primary">
-  ok <button>mleko</button></mat-toolbar
->
+  <p>LOGOO</p>
+  <span class="example-spacer"></span>
+
+  <button mat-button color="accent">mleko</button>
+  <button mat-button color="accent">mleko</button>
+  <button mat-button color="accent">mleko</button>
+
+  <span class="example-spacer"></span>
+  <button mat-button color="accent">mleko</button>
+  <button mat-button color="accent">mleko</button>
+</mat-toolbar>
 <div class="container">
   <router-outlet></router-outlet>
 </div>
