--- a/FirstProject/src/app/components/commentSection/commentSection.component.html
+++ b/FirstProject/src/app/components/commentSection/commentSection.component.html
@@ -1,1 +1,10 @@
-<p>HELLO</p>
+<div>
+  <button (click)="showComment()">Show comment</button>
+  @for (comments of container; track comments) {
+
+  <div>
+    <h3>{{ users[$index % users.length] }}</h3>
+    <p>{{ message[$index % users.length] }}</p>
+  </div>
+  }
+</div>
