--- a/FirstProject/src/app/components/commentSection/commentSection.component.scss
+++ b/FirstProject/src/app/components/commentSection/commentSection.component.scss
@@ -22,4 +22,11 @@
   background-color: white;
   width: 90%;
   margin: 1rem;
+  border-radius: 0.5rem;
+  padding: 1rem;
+}
+
+.error {
+  color: aqua;
+  font-weight: bold;
 }
