--- a/FirstProject/src/app/components/commentSection/commentSection.component.html
+++ b/FirstProject/src/app/components/commentSection/commentSection.component.html
@@ -1,12 +1,12 @@
 <div class="container">
   <button class="my-btn" (click)="showComment()">Show comment</button>
-  @for (comments of container; track comments) {
-
+  @for (comments of container; track comments) { @if ($index < this.users.length
+  ){
   <div class="comment">
     <h3>{{ users[$index] }}</h3>
     <p>{{ message[$index] }}</p>
   </div>
-  @if ($index >= this.users.length + 1) {
+  } @else {
   <p class="error">{{ empty }}</p>
 
   } }
