--- a/FirstProject/src/app/components/commentSection/commentSection.component.scss
+++ b/FirstProject/src/app/components/commentSection/commentSection.component.scss
@@ -17,6 +17,7 @@
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   font-weight: bold;
+  transition: 0.1 color;
 }
 .comment {
   background-color: white;
