--- a/FirstProject/src/app/components/python-logic/python-logic.component.html
+++ b/FirstProject/src/app/components/python-logic/python-logic.component.html
@@ -1,4 +1,4 @@
 <div>
   <p>HI</p>
-  <button (click)="run(printF)" class="text-white">Click</button>
+  <button (click)="run(runPythonCode)" class="text-white">Click</button>
 </div>
